Blender Internal Render's Gather don't use node's emit color. #40507

Closed
opened 2014-06-05 19:21:34 +02:00 by Danyang Yi · 7 comments

System Information
win7 64bit sp1
gtx 760

Blender Version
Broken: 2.70.5 Hash:6f1a648

Short description of error
Blender Internal Render's Gather don't use node's emit color.

Exact steps for others to reproduce the error
1, Create a floor mesh under the default cube;
2, Set emit value = 1 and color = Red in default material;
3, Active node in Active material and Set another material color = Green.
4, Active Indirect Lighting and Use Approximate Gather.
5, Select output node. There's a green color and we can't find something red.
6, Press F12. Render result is Green Object with Red emit.

We believe the actived node material preset should be override red material preset.
cuz Red material preset was been inactived. and output node don't have red material preset.

Blender_Internal_Render_s_Gather_don_t_use_node_s_emit_color..jpg

File:
Blender_Internal_Render_s_Gather_don_t_use_node_s_emit_color..blend

**System Information** win7 64bit sp1 gtx 760 **Blender Version** Broken: 2.70.5 Hash:6f1a648 **Short description of error** Blender Internal Render's Gather don't use node's emit color. **Exact steps for others to reproduce the error** 1, Create a floor mesh under the default cube; 2, Set emit value = 1 and color = Red in default material; 3, Active node in Active material and Set another material color = Green. 4, Active Indirect Lighting and Use Approximate Gather. 5, Select output node. There's a green color and we can't find something red. 6, Press F12. Render result is Green Object with Red emit. We believe the actived node material preset should be override red material preset. cuz Red material preset was been inactived. and output node don't have red material preset. ![Blender_Internal_Render_s_Gather_don_t_use_node_s_emit_color..jpg](https://archive.blender.org/developer/F92753/Blender_Internal_Render_s_Gather_don_t_use_node_s_emit_color..jpg) File: [Blender_Internal_Render_s_Gather_don_t_use_node_s_emit_color..blend](https://archive.blender.org/developer/F92755/Blender_Internal_Render_s_Gather_don_t_use_node_s_emit_color..blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @yang2018

Added subscriber: @yang2018

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Bastien Montagne self-assigned this 2014-09-06 22:48:38 +02:00

In fact, current code simply fully ignores nodes here (even noted as TODO in code), even though it's rather simple to add… will handle this.

In fact, current code simply fully ignores nodes here (even noted as TODO in code), even though it's rather simple to add… will handle this.

This issue was referenced by 3a47c1a9d3

This issue was referenced by 3a47c1a9d3eeaafce6efa4ef570583b6aba477cb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3a47c1a9d3.

Closed by commit 3a47c1a9d3.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40507
No description provided.