Fix T40507: Blender Internal Render's Gather don't use node's emit color.

Node was simply ignored by occ shading (noted as TODO), though it's a mere matter
of a very few lines of code, nowadays... Just copied from similar task in bake code.